[tool.poetry]
name = "qinglong"
version = "0.1.0"
description = "My Qinglong Script"
authors = ["Ryliey"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
selectolax = "^0.3.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
