[project]
name = "qinglong-script"
version = "0.1.0"
description = "My Qinglong Script"
authors = [{ name = "Ryliey" }]
requires-python = "~=3.12"
readme = "README.md"
license = "GPL-3.0"
dependencies = ["requests>=2.32.3,<3"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
